Replaced imgs and updated app name.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="recording_title">CycleTracks</string>
+    <string name="recording_title">DemoTracks</string>
     
-    <string name="app_name">CycleTracks</string>
+    <string name="app_name">DemoTracks</string>
 <string name="previous_trips">Saved Trips:</string>
 <string name="startNewTrip">Start Trip!</string>
 <string name="pauseButtonLabel">Pause</string>
@@ -11,7 +11,7 @@
 <string name="enterTripInfo">And add any comments about your trip here</string>
 <string name="promptPurpose">Select the main purpose of this trip</string>
 <string name="uploadProgressTitle">Sending...</string>
-<string name="uploadProgressMessage">Sending your trip.\n\nThanks for using CycleTracks!</string>
+<string name="uploadProgressMessage">Sending your trip.\n\nThanks for using DemoTracks!</string>
 
 
 
